--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,3 +1,7 @@
+<% include partials/header.ejs %>
+
 <h1>Welcome landing!</h1>
 
 <a href="/campgrounds">View all campgrounds</a>
+
+<% include partials/footer.ejs %>
