--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,15 +1,31 @@
 <% include partials/header.ejs %>
-
-<h1>This is the campgrounds!</h1>
-
-<% campgrounds.forEach(function(camp){ %>
-    <div>
-        <h4><%= camp.name %></h4>
-        <img src = "<%= camp.image %>">
+<div class="container">
+    <header class="jumbotron">
+        <div class="container">
+        <h1>This is the Campgrounds!</h1>
+        <p>View our beautiful camps.</p>
+        <p>
+            <a class="btn btn-primary btn-lg" href="/campgrounds/new">create new campground</a>
+        </p>
+        </div>
+    </header>
+    
+    
+ 
+    <div class="row text-center" style="display:flex; flex-wrap: wrap;">
+        <% campgrounds.forEach(function(camp){ %>
+            <div class="col-md-3 col-sm-6">
+                <div class="thumbnail">
+                    <img src = "<%= camp.image %>">
+                    <div class="caption"><h4><%= camp.name %></h4></div>
+                </div>
+            </div>
+        <% }); %>
     </div>
-<% }); %>
 
-
-<a href="/">Search again</a>
+    
+    <a href="/">Home</a>
+</div>
+    
 
 <% include partials/footer.ejs %>
