--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -18,6 +18,7 @@
                 <div class="thumbnail">
                     <img src = "<%= camp.image %>">
                     <div class="caption"><h4><%= camp.name %></h4></div>
+                    <a href="/campgrounds/<%= camp._id %>" class="btn btn-primary">More Info</a>
                 </div>
             </div>
         <% }); %>
