--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 	</head>
 
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse bg-black">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,9 +36,14 @@
       </form>
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Log in</a></li>
-		<li><a href="#">Sign Up</a></li>
-		<li><a href="#">Log out</a></li>
+        <% if(!currentUser){ %>
+          <li><a href="/login">Log in</a></li>
+		      <li><a href="/register">Sign Up</a></li>
+        <% } else { %>
+          <li><a href="#">Signed in as <%= currentUser.username %></a></li>
+          <li><a href="/logout">Log out</a></li>
+        <% } %>
+		      
       </ul>
     </div><!-- /.navbar-collapse -->
     
