--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<% include ../partials/header.ejs %>
 <div class="container">
     <div class="row">
         <h1 style="text-align: center">Create a New Campground</h1>
@@ -19,4 +19,4 @@
 
 
 
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
