--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header.ejs %>
+<% include ../partials/header.ejs %>
 <div class="container">
     <div class="row">
         <div class="col-md-3">
@@ -16,6 +16,14 @@
                     <h4 class="pull-right">$9.00/night</h4>
                     <h4 class="caption"><a><%= campground.name%></a></h4>
                     <p><%= campground.description%></p>
+                    <p><em>Created by <%= campground.author.username%></em> </p>
+                    <% if (currentUser && campground.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit">Edit</a>
+                        <form class="delete-form" action="/campgrounds/<%= campground._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
+                    <% } %>
+                    
                 </div>
             </div>
             <div  class="well">
@@ -25,6 +33,13 @@
                     <strong><%=comment.author.username%></strong>
                     <span class="pull-right">10 days ago</span>
                     <p><%= comment.text %></p>
+                        <% if (currentUser && comment.author.id.equals(currentUser._id)){ %>
+                            <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id%>/comments/<%=comment._id%>/edit">Edit</a>
+                            <form class="delete-form" action="/campgrounds/<%= campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                <button class="btn btn-xs btn-danger">Delete</button>
+                            </form>
+                        <% } %>
+                    <br>
                 <% });%>
             </div>
         </div>
@@ -35,4 +50,4 @@
 
 
 
-<% include partials/footer.ejs %>
+<% include ../partials/footer.ejs %>
