--- a/views/campgrounds/campgrounds.ejs
+++ b/views/campgrounds/campgrounds.ejs
@@ -2,10 +2,10 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-        <h1>This is the Campgrounds!</h1>
-        <p>View our beautiful camps.</p>
+        <h1>This is the Rap Albums!</h1>
+        <p>View our crazy rap lyrics.</p>
         <p>
-            <a class="btn btn-primary btn-lg" href="/campgrounds/new">create new campground</a>
+            <a class="btn btn-primary btn-lg" href="/campgrounds/new">create new album</a>
         </p>
         </div>
     </header>
