--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,6 +5,7 @@
         <div style="width: 30%; margin: 30px auto;">
             <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST">
                 <div class="form-group"><input class="form-control" type="text" name="editcamp[name]" value="<%=campground.name%>"></div>
+                <div class="form-group"><input class="form-control" type="text" name="editcamp[price]" value="<%=campground.price%>"></div>
                 <div class="form-group"> <input class="form-control" type="text" name="editcamp[image]" value="<%=campground.image%>"></div>
                 <div class="form-group"> <input class="form-control" type="text" name="editcamp[description]" value="<%=campground.description%>"></div>
                 <div class="form-group"><button class="btn btn-lg btn-primary btn-block">Submit!</button></div>
