--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,9 +13,9 @@
             <div class="thumbnail">
                 <p><img class="img-responsive" src = "<%= campground.image%>"></p>
                 <div class="caption-full">
-                    <h4 class="pull-right">$9.00/night</h4>
+                    <h4 class="pull-right">Price: $<%= campground.price%></h4>
                     <h4 class="caption"><a><%= campground.name%></a></h4>
-                    <p><%= campground.description%></p>
+                    <p id="lyrics"><%= campground.description %></p>
                     <p><em>Created by <%= campground.author.username%></em> </p>
                     <% if (currentUser && campground.author.id.equals(currentUser._id)){ %>
                         <a class="btn btn-warning" href="/campgrounds/<%= campground._id%>/edit">Edit</a>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div  class="well">
-                <div class="text-right"><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add new comment</a></div>
+                <div class="text-right"><a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Freestyle</a></div>
                 <hr>
                 <% campground.comments.forEach(function(comment){ %>
                     <strong><%=comment.author.username%></strong>
