--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header.ejs %>
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center">Edit the Comment</h1>
+        <h1 style="text-align: center">Edit the Freestyle</h1>
         <div style="width: 30%; margin: 30px auto;">
             <form action="/campgrounds/<%= campground_id%>/comments/<%=comment._id%>?_method=PUT" method="POST">
                 <div class="form-group"> <input class="form-control" type="text" name="comment[text]" value="<%=comment.text%>"></div>
