--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header.ejs %>
 <div class="container">
     <div class="row">
-        <h1 style="text-align: center">Create a New Comment to <%= campground.name%></h1>
+        <h1 style="text-align: center">Create a New Freestyle to <%= campground.name%></h1>
         <div style="width: 30%; margin: 30px auto;">
             <form action="/campgrounds/<%= campground._id%>/comments" method="POST">
                 <div class="form-group"> <input class="form-control" type="text" name="comment[text]" placeholder="text"></div>
