--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,10 +1,23 @@
 <% include partials/header.ejs %>
+<div class="container">
+    <div class="row">
+        <h1 style="text-align: center">Log In</h1>
+        <div style="width: 30%; margin: 30px auto;">
 
-<h1>Login</h1>
-<form action="/login" method="post">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="submit" value="Login">
-</form>
+
+        <form action="/login" method="post">
+            <div class="form-group"><input class="form-control" type="text" name="username" placeholder="username"></div>
+            <div class="form-group"><input class="form-control" type="password" name="password" placeholder="password"></div>
+            <div class="form-group"><input class="btn btn-lg btn-primary btn-block" type="submit" value="Log In"></div>
+        </form>
+        
+        
+        
+        </div>
+    </div>
+    
+</div>
+
+
 
 <% include partials/footer.ejs %>
