--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,7 +37,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <% if(!currentUser){ %>
-          <li><a href="/login">Log in</a></li>
+          <li><a href="/login">Log In</a></li>
 		      <li><a href="/register">Sign Up</a></li>
         <% } else { %>
           <li><a href="#">Signed in as <%= currentUser.username %></a></li>
