--- a/views/campgrounds/campgrounds.ejs
+++ b/views/campgrounds/campgrounds.ejs
@@ -2,7 +2,7 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-        <h1>This is the Rap Albums!</h1>
+        <h1>Enjoy our Rap Albums!</h1>
         <p>View our crazy rap lyrics.</p>
         <p>
             <a class="btn btn-primary btn-lg" href="/campgrounds/new">create new album</a>
